objects/geopointe__GP_Field_Mapping__c.object
<CustomObject>
    <description>Global Business &amp; People Layers is no longer a part of Geopointe.</description>
    <fields>
        <fullName>geopointe__Geopointe_Field_Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geopointe Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geopointe_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geopointe Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geopointe_Object_Mapping__c</fullName>
        <label>Geopointe Object Mapping</label>
        <referenceTo>geopointe__GP_Object_Mapping__c</referenceTo>
        <relationshipLabel>Geopointe Field Mappings</relationshipLabel>
        <relationshipName>Geopointe_Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>geopointe__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Sfdc_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sfdc Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geopointe Field Mapping</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Geopointe Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>